--- a/qp_setup.html
+++ b/qp_setup.html
@@ -626,7 +626,7 @@
 
             const now = new Date();
             const questJson = {
-                webviewUrl: "http://localhost:3000",
+                webviewUrl: "https://nethical6.github.io/qp_pomodoro/",
                 uniqueId: generateUUID().toString(),
                 workDuration: workDuration.toString(),
                 shortBreakDuration: shortBreakDuration.toString(),
