--- a/index.html
+++ b/index.html
@@ -9,15 +9,22 @@
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        user-select: none;
       }
 
-      :root {
-        --color-primary: #6366f1;
-        --color-accent: #ec4899;
-        --color-text: #1f2937;
-        --color-text-secondary: #6b7280;
-        --color-background: #ffffff;
-        --color-success: #10b981;
+  :root {
+        --color-primary: #00ff9f;
+        --color-on-primary: #000000;
+        --color-secondary: #00bfff;
+        --color-on-secondary: #000000;
+        --color-tertiary: #8a2be2;
+        --color-on-tertiary: #ffffff;
+        --color-background: #0a0a0a;
+        --color-on-background: #00ff9f;
+        --color-surface: #111111;
+        --color-on-surface: #b0ffda;
+        --color-error: #ff0040;
+        --color-on-error: #000000;
       }
 
       body {
@@ -47,13 +54,13 @@
       .title {
         font-size: 18px;
         font-weight: 500;
-        color: var(--color-text-secondary);
+        color: var(--color-on-background);
         letter-spacing: 0.5px;
       }
 
       .subtitle {
         font-size: 13px;
-        color: var(--color-text-secondary);
+        color: var(--color-on-background);
         opacity: 0.6;
         margin-top: 8px;
         font-weight: 400;
@@ -75,14 +82,14 @@
 
       .progress-bg {
         fill: none;
-        stroke: #f3f4f6;
+        stroke: var(--color-error);
         stroke-width: 2;
       }
 
       .progress-bar {
         fill: none;
         stroke: var(--color-primary);
-        stroke-width: 2;
+        stroke-width: 6;
         stroke-linecap: round;
         transition: stroke-dashoffset 1s linear;
       }
@@ -100,14 +107,14 @@
         font-weight: 300;
         letter-spacing: -3px;
         font-variant-numeric: tabular-nums;
-        color: var(--color-text);
+        color: var(--color-on-surface);
       }
 
       .phase {
         font-size: 13px;
         letter-spacing: 0.5px;
         margin-top: 12px;
-        color: var(--color-text-secondary);
+        color: var(--color-on-surface);
         font-weight: 400;
       }
 
@@ -131,7 +138,7 @@
 
       .btn-primary {
         background: var(--color-primary);
-        color: white;
+        color: var(--color-on-primary);
         box-shadow: 0 4px 14px rgba(99, 102, 241, 0.25);
       }
 
@@ -146,13 +153,13 @@
 
       .btn-secondary {
         background: transparent;
-        color: var(--color-text-secondary);
+        color: var(--color-on-surface);
         border: 1px solid #e5e7eb;
       }
 
       .btn-secondary:hover {
-        background: #f9fafb;
-        border-color: #d1d5db;
+        background: var(--color-on-surface);
+        color: var(--color-surface);
       }
 
       .btn:disabled {
@@ -184,13 +191,13 @@
         font-weight: 300;
         display: block;
         margin-bottom: 6px;
-        color: var(--color-text);
+        color: var(--color-on-surface);
       }
 
       .stat-label {
         font-size: 12px;
         letter-spacing: 0.5px;
-        color: var(--color-text-secondary);
+        color: var(--color-on-surface);
         font-weight: 400;
       }
 
@@ -198,11 +205,10 @@
         position: fixed;
         top: 24px;
         right: 24px;
-        background: var(--color-success);
-        color: white;
+        background: var(--color-primary);
+        color: var(--color-on-primary);
         padding: 14px 20px;
         border-radius: 100px;
-        box-shadow: 0 4px 14px rgba(16, 185, 129, 0.25);
         transform: translateX(400px);
         transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
         z-index: 2000;
@@ -218,7 +224,7 @@
         margin-top: 24px;
         font-size: 13px;
         text-align: center;
-        color: var(--color-text-secondary);
+        color: var(--color-on-surface);
         font-weight: 400;
         letter-spacing: 0.5px;
       }
@@ -730,29 +736,28 @@ function updateDisplay(noTransition = false) {
 
     document.title = `${timeString} - Pomodoro`;
 }
-
-function applyTheme(theme) {
+    function applyTheme(theme) {
     const root = document.documentElement;
-    const elements = document.querySelectorAll(".theme-transition, .card, .settings-content");
-
-    elements.forEach((el) => {
-        if (el) el.classList.add("theme-transition");
+    const card = document.querySelector('.profile-card');
+    const elements = document.querySelectorAll('.theme-transition');
+    
+    [card, ...elements].forEach(el => {
+        if (el) el.classList.add('theme-transition');
     });
 
-    root.style.setProperty("--color-primary", theme.primary || "#ff6b6b");
-    root.style.setProperty("--color-on-primary", theme.onPrimary || "#ffffff");
-    root.style.setProperty("--color-secondary", theme.secondary || "#4ecdc4");
-    root.style.setProperty("--color-on-secondary", theme.onSecondary || "#ffffff");
-    root.style.setProperty("--color-background", theme.background || "#1a1a2e");
-    root.style.setProperty("--color-on-background", theme.onBackground || "#ffffff");
-    root.style.setProperty("--color-surface", theme.surface || "#16213e");
-    root.style.setProperty("--color-on-surface", theme.onSurface || "#ffffff");
+    root.style.setProperty('--color-primary', theme.primary || '#00FF9F');
+    root.style.setProperty('--color-on-primary', theme.onPrimary || '#000000');
+    root.style.setProperty('--color-secondary', theme.secondary || '#00BFFF');
+    root.style.setProperty('--color-on-secondary', theme.onSecondary || '#000000');
+    root.style.setProperty('--color-tertiary', theme.tertiary || '#8A2BE2');
+    root.style.setProperty('--color-on-tertiary', theme.onTertiary || '#FFFFFF');
+    root.style.setProperty('--color-background', theme.background || '#0A0A0A');
+    root.style.setProperty('--color-on-background', theme.onBackground || '#00FF9F');
+    root.style.setProperty('--color-surface', theme.surface || '#111111');
+    root.style.setProperty('--color-on-surface', theme.onSurface || '#B0FFDA');
+    root.style.setProperty('--color-error', theme.error || '#FF0040');
+    root.style.setProperty('--color-on-error', theme.onError || '#000000');
 
-    setTimeout(() => {
-        elements.forEach((el) => {
-            if (el) el.classList.remove("theme-transition");
-        });
-    }, 300);
 }
 
 function injectData(data) {
